fix(263212): newly generated schemas and swagger docs
